--- a/index.html
+++ b/index.html
@@ -6,7 +6,57 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="body">
+  <div class="container">
+    <header>
+      <div class="parentA">
+        <div class="top">
+          <img src="light.png" alt="Company_Logo" class="light">
+          <h2 class="upper">UPPER</h2>
+        </div>
+        <div class="nav">
+          <li class="menu">Home</li>
+          <li class="menu">First Gallery</li>
+          <li class="menu">Second</li>
+          <li class="menu">Third Grid</li>
+          <li class="menu">About Us</li>
+          <li class="menu">Contact</li>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="parentB">
+        <div class="child">
+          <img src="leave.png" class="pic" alt="Picture_of_a_Leave.">
+          <h3 class="intro">Hello Guest</h3>
+          <p>Upper HTML Template contains different background images for pages. Please check motion template if you want to see <a href="">Motion Template</a>if you want to see video backgrounds. Feel free to donload and use web templatemo</p>
+        </div>
+        <div class="child">
+          <img src="bicycle.png" class="pic" alt="Picture_of_a_Bicycle.">
+          <h3 class="intro">Welcome</h3>
+          <p>There are 3 different galleries in this template. You can customize them in any suitable way you prefer. You can also modify the content columns as you wish. Images are from Unsplash website. Good Luck!</p>
+        </div>
+        <div class="child">
+          <img src="airplane.png" class="pic" alt="Picture_of_a_Airplane.">
+          <h3 class="intro">Stay Relaxed</h3>
+          <p>You can easily change icons in HTML codes by <a href="">Font Awesome.</a>Praesent tempus dapibus. Curabitur sodales, est auctor congue vulputate, nisl tellus finibus nunc, vitae consectetur enim.</p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="parentC">
+        <div class="icon">
+          <img src="facebook.png" alt="Facebook_Icon" class="symbol">
+          <img src="google.png" alt="Google_plus_Icon" class="symbol">
+          <img src="twitter.png" alt="Twitter_Icon" class="symbol">
+          <img src="behance.png" alt="Behance_Icon" class="symbol">
+          <img src="linkedin.png" alt="LinkedIn_Icon" class="symbol">
+        </div>
+        <div class="copyright">
+          <p>Copyright © 2016 Your Company-Design: Templatemo</p>
+        </div>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
